# mulle-make

./: .gitignore  .travis.yml  CMakeLists.txt  CMakePackage.cmake  CMakePackage.txt  Makefile  README.md  RELEASENOTES.md  TODO.md  install.sh  installer  mulle-bootstrap  mulle-make  mulle-make-completion.sh  mulle-make.sublime-project  mulle-mingw-cmake  mulle-mingw-cpp  mulle-mingw-dumpdef  mulle-mingw-dumpdef.bat  mulle-mingw-dumpdef.sh  mulle-mingw-make
.github/workflows/: semgrep.yml
cola/: description.md.bud  info.md.bud  properties.plist  usage.md.bud  you-are-here.md.bud
dox/: Makefile  NAQ.md  XCODE_FAQ.md  definition-list.md  make-pix.sh  mulle-sde-overview.dot  overview.dot
dox/fetch/: repository-change-tracking.md
dox/reference/: TODO.md  clean.md  definition.md  index.md  install.md  libexec-dir.md  list.md  log.md  project.md  show.md  uname.md  version.md
mulle-project/: formula-info.sh  generate-formula.sh  version-info.sh
src/: mulle-bootstrap-auto-update.sh  mulle-bootstrap-brew.sh  mulle-bootstrap-build.sh  mulle-bootstrap-clean.sh  mulle-bootstrap-command.sh  mulle-bootstrap-copy.sh  mulle-bootstrap-core-options.sh  mulle-bootstrap-defer.sh  mulle-bootstrap-dispense.sh  mulle-bootstrap-fetch.sh  mulle-bootstrap-functions.sh  mulle-bootstrap-git.sh  mulle-bootstrap-init.sh  mulle-bootstrap-local-environment.sh  mulle-bootstrap-logging.sh  mulle-bootstrap-mingw.sh  mulle-bootstrap-paths.sh  mulle-bootstrap-project.sh  mulle-bootstrap-repositories.sh  mulle-bootstrap-scm.sh  mulle-bootstrap-scripts.sh  mulle-bootstrap-settings.sh  mulle-bootstrap-shared.sh  mulle-bootstrap-show.sh  mulle-bootstrap-source.sh  mulle-bootstrap-status.sh  mulle-bootstrap-systeminstall.sh  mulle-bootstrap-tag.sh  mulle-bootstrap-warn-scripts.sh  mulle-bootstrap-xcode.sh  mulle-bootstrap-zombify.sh  mulle-make-bash-completion.sh  mulle-make-build.sh  mulle-make-command.sh  mulle-make-common.sh  mulle-make-compiler.sh  mulle-make-definition.sh  mulle-make-list.sh  mulle-make-log.sh  mulle-make-mingw.sh  (+7 more)
src/mulle-bootstrap-build-plugins/: autoconf.sh  cmake.sh  configure.sh  script.sh  xcodebuild.sh
src/mulle-bootstrap-scm-plugins/: git.sh  svn.sh  symlink.sh  tar.sh  zip.sh
src/mulle-bootstrap-source-plugins/: git.sh  svn.sh  symlink.sh  tar.sh  zip.sh
src/plugins/: autoconf.sh  cmake.sh  configure.sh  make.sh  meson.sh  script.sh  xcodebuild.sh
templates/: CMakePackage.txt.scion
test/: mock-autoconf  mock-autoreconf  mock-cmake  mock-cmake1  mock-configure  mock-make  mock-meson  mock-ninja  mock-xcodebuild  run-test
test/01-cmake-build/: debug_cmake.txt  debug_cmake.txt.darwin  paths_cmake.txt  paths_cmake.txt.darwin  paths_cmake.txt.windows  release_cmake.txt  release_cmake.txt.darwin  run-test  xxx_cmake.txt  xxx_cmake.txt.darwin
test/02-configure-build/: paths_configure.txt  paths_configure.txt.darwin  paths_configure.txt.mingw  paths_configure.txt.windows  release_prefix_configure.txt  run-test
test/03-autoconf-build/: autoreconf.txt  run-test
test/04-xcodebuild-build/: debug_xcodebuild.txt  paths_xcodebuild.txt  prefix_xcodebuild.txt  release_xcodebuild.txt  run-test  sdk_xcodebuild.txt  user_xcodebuild.txt  userplus_xcodebuild.txt  xcconfig_xcodebuild.txt
test/05-meson-build/: meson.build  paths_meson.txt  paths_meson.txt.darwin  release_meson.txt  release_prefix_meson.txt  run-test
test/06-definition/: run-test
test/07-make-build/: make-1.txt  make-2.txt  make-3.txt  make-3.txt.darwin  run-test
test/07-merge/: run-test
test/08-definition-export/: run-test
test/09-cflags-combination/: README.md  run-test
test/10-merge/: run-test
test/11-cmake-install/: CMakeLists.txt  main.c  mylib.c  run-test
test/12-default-append/: run-test
test/14-xcodebuild-install/: run-test
tests/: mock-autoconf  mock-autoreconf  mock-cmake  mock-configure  mock-make  mock-meson  mock-ninja  mock-xcodebuild  run-test  run-test.sh
tests/01-cmake-build/: paths_cmake.txt  run-test  run-test.sh
tests/01-simple-cloned/: run-test.sh
tutorial/: README-cmake.md  README-xcodebuild.md
(+52 files in other folders)
